Fix navbar projects alignment and add optional flex styling

--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -1,6 +1,8 @@
 .navbar {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
+	// display: flex;
+	// justify-content: space-between;
 	width: 100%;
 	max-width: rem-calc(1280);
 	position: fixed;
@@ -9,9 +11,7 @@
 	background: var(--lightBg);
 	z-index: 2;
 	box-shadow: 0px 15px 10px -20px rgba(17, 17, 17, 0.3); 
-
 	
-
 	a {
 		text-decoration: none;
 		color: var(--lightColor);
@@ -27,18 +27,21 @@
 
 	.navbar-list {
 		display: flex;
-		justify-content: space-around;
 		font-size: rem-calc(20);
 				
-		
 		.navbar-item {
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
-		}
-		.navbar-item:hover{
-			transform: scale(1.2, 1.2);
-			transition: all .5s ease-in-out;
+			width: 100%;
+			a {
+				text-align: right;
+				&:hover {
+					transform: scale(1.05, 1.05);
+					transition: all .5s ease-in-out;
+				}
+			}
+			
 		}
 	
 	}
